[package]
name = "gayser_test"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.28", features = ["rt-multi-thread", "macros"] }
yellowstone-grpc-client = "6.0.0"
yellowstone-grpc-proto = "6.0.0"
futures = "0.3"
log = "0.4"
env_logger = "0.11.8"
bs58 = "0.5.0"
tonic = "0.12.3"
solana-pubkey = "2.2.1"
clap = { version = "4.5.40", features = ["derive"] }
